# SPAWEB

./: .env.sample  pyproject.toml  requirements.txt
config/: settings.py
habits/: models.py  serializer.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_habit_send_date.py
users/: admin.py  models.py  permissions.py  urls.py  views.py
users/management/commands/: test_message_send.py
users/migrations/: 0001_initial.py  0002_user_telegram_chat_id.py
