[tool.poetry]
name = "spaweb"
version = "0.1.0"
description = ""
authors = ["alexeyzakirov <zakirov.alexey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
serializers = "^0.2.4"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
